# graphboard-tuwim-reconstruction

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  convert_all_images_to_jpeg.py  extract_all_images.py  extract_animation_batch.py  graphboard_bdf_inspect.py  graphboard_export_scene.py  graphboard_extract_assets.py  graphboard_file_formats.md  run_all_images_collect_only.ps1  run_all_images_pass.ps1  run_animation_batch.ps1  run_animation_full_pass.ps1  run_animation_remaining_batches.ps1  run_convert_all_images_to_jpeg.ps1
archive/web_port_legacy/: README.md  RUNTIME_NOTES.md  app.js  styles.css
archive/web_port_legacy/assets/: index.json
archive/web_port_legacy/groups/: CURSORS.json  CURSORS1.json  CURSORS2.json  GR_CZYM.json  G_REC.json  G_TAN.json
archive/web_port_legacy/scenes/: ABECADP1.json  ABECADP2.json  ABEC_PS.json  ABEC_R.json  ABEC_T.json  CUDA_C.json  CUDA_PS2.json  CUDA_PS3.json  CUDA_R.json  DYZIO.json  DYZIOP1.json  DYZIOP2.json  (+132 more)
cpp_port/: CMakeLists.txt  README.md
cpp_port/docs/: component_interfaces.md  editbox_recovery_notes.md  editor_acceptance.md  editor_format_recovery.md  holder_recovery_notes.md  runtime_recovery_notes.md
cpp_port/include/: ghidra_compat.hpp
cpp_port/include/graphboard/: authoring.hpp  binary_reader.hpp  binary_writer.hpp  component.hpp  format.hpp  guid.hpp  holders.hpp  image.hpp  render.hpp  text.hpp  video.hpp
cpp_port/include/graphboard/runtime/: interpreter.hpp  lexer.hpp  page.hpp  project.hpp  script.hpp  value.hpp
cpp_port/reconstructed/: ComponentHolders_reconstructed.cpp  GraphBoardDocument_reconstructed.cpp  TransparentVideoHolder_reconstructed.cpp
cpp_port/src/: authoring.cpp  authoring_assets.cpp  authoring_project.cpp  binary_reader.cpp  binary_writer.cpp  component.cpp  format.cpp  holders.cpp  image.cpp  render.cpp  video.cpp
cpp_port/src/runtime/: interpreter.cpp  lexer.cpp  page.cpp  project.cpp  script.cpp  value.cpp
cpp_port/tests/: asserts_enabled.hpp  authoring.cpp  image.cpp  runtime_interpreter.cpp  runtime_page.cpp  runtime_project.cpp  runtime_script.cpp  synthetic_parse.cpp  video.cpp
cpp_port/tools/: export_from_ghidra_mcp.ps1  export_program_functions_from_ghidra_mcp.ps1  extract_typelib.py  gbauthor.cpp  gbeditor.cpp  gbgame.cpp  gbinspect.cpp  gbweb.cpp  verify_brzechwa.ps1  verify_scenes.ps1
extracted_assets/: README.md  all_images_summary.json  animation_batch_summary.json  manifest.json
extracted_assets/all_images_raw/: bdf__CUDA_PS2__multibitmap__03_MultiBitmap_000_a3.raw  bdf__CUDA_PS3__multibitmap__03_MultiBitmap_000_a2.raw  bdf__RYCERZ1__multibitmap__03_MultiBitmap_004_che_my 2.raw  bdf__RYCERZ1__multibitmap__03_MultiBitmap_005_che_my 3.raw  bdf__RYCERZ1__multibitmap__03_MultiBitmap_006_klejnot 0.raw  bdf__RYCERZ1__multibitmap__03_MultiBitmap_011_klejnot 0.raw  bdf__RZECZKA__multibitmap__05_MultiBitmap_014_przycisk.raw  bdf__RZECZKA__multibitmap__05_MultiBitmap_016_przycisk.raw  bdf__RZECZKA__multibitmap__05_MultiBitmap_017_przycisk.raw  bdf__RZECZKA__multibitmap__05_MultiBitmap_018_przycisk.raw  bdf__RZECZKA__multibitmap__05_MultiBitmap_019_przycisk.raw  bdf__SLON__multibitmap__00_MultiBitmap_008_tlo 03.raw  bdf__SLON__multibitmap__00_MultiBitmap_011_tlo 06.raw  bdf__SLON__multibitmap__00_MultiBitmap_013_s02.raw  bdf__SLON__multibitmap__00_MultiBitmap_014_s03.raw  bdf__SLON__multibitmap__00_MultiBitmap_015_s04.raw  bdf__SLON__multibitmap__00_MultiBitmap_016_s05.raw  bdf__SLON__multibitmap__00_MultiBitmap_017_s06.raw  bdf__SLON__multibitmap__00_MultiBitmap_018_p01.raw  bdf__SLON__multibitmap__00_MultiBitmap_019_p02.raw  bdf__SLON__multibitmap__00_MultiBitmap_021_p04.raw  bdf__SLON__multibitmap__00_MultiBitmap_022_p05.raw  bdf__SLON__multibitmap__00_MultiBitmap_023_p06.raw  bdf__SLON__multibitmap__00_MultiBitmap_024_p01.raw  bdf__SLON__multibitmap__00_MultiBitmap_025_p02.raw  bdf__SLON__multibitmap__00_MultiBitmap_027_p04.raw  bdf__SLON__multibitmap__00_MultiBitmap_029_p06.raw  bdf__SLON__multibitmap__00_MultiBitmap_033_p04.raw  bdf__SLON__multibitmap__00_MultiBitmap_034_p05.raw  bdf__SLON__multibitmap__00_MultiBitmap_037_korona 02.raw  bdf__SLON__multibitmap__00_MultiBitmap_038_korona 03.raw  bdf__SLON__multibitmap__00_MultiBitmap_044_korona 03.raw  bdf__SLON__multibitmap__00_MultiBitmap_046_korona 05.raw  bdf__SLON__multibitmap__00_MultiBitmap_052_korona 05.raw  bdf__SLON__multibitmap__00_MultiBitmap_053_korona 06.raw  bdf__SLON__multibitmap__00_MultiBitmap_054_kamienie.raw  bdf__SLON__multibitmap__00_MultiBitmap_058_kamienie.raw  bdf__SLON__multibitmap__00_MultiBitmap_059_kamienie.raw  bdf__SLON__multibitmap__00_MultiBitmap_060_k01.raw  bdf__SLON__multibitmap__00_MultiBitmap_062_k03.raw  (+55 more)
gbtrace/: README.md  build.bat  gbcdb.txt  gblaunch.c  gbtrace.c  gbtrace.ini
ghidra_import/: ComponentHolders_reconstructed.cpp  GraphBoardDocument_reconstructed.cpp  TransparentVideoHolder_decomp.txt  TransparentVideoHolder_reconstructed.cpp  duplicate_dll_merge_notes.md  important_function_renames_20260708.md
tools/: build_web_data.py  compile_reconstructions.ps1
web_port/: RUNTIME_NOTES.md  app.js  index.html  parity_harness.js  parity_scenarios.json  runtime.js  styles.css  validation.json
web_port/groups/: CURSORS.json  CURSORS1.json  CURSORS2.json  GR_CZYM.json  G_PIOS.json  G_REC.json  G_TAN.json  index.json
web_port/scenes/: ABECADLO.json  ABECADP1.json  ABECADP2.json  ABEC_C.json  ABEC_PS.json  ABEC_R.json  ABEC_T.json  CUDA.json  CUDAP1.json  CUDAP2.json  CUDA_C.json  CUDA_PS1.json  CUDA_PS2.json  CUDA_PS3.json  CUDA_R.json  CUDA_T.json  DYZIO.json  DYZIOP1.json  DYZIOP2.json  DYZIO_C.json  DYZIO_R.json  FIGIELEK.json  FIGIELP1.json  FIGIELP2.json  FIGIEL_C.json  FIG_R.json  GRZESIU.json  GRZESP1.json  GRZESP2.json  GRZES_C.json  GRZES_R.json  INTRO.json  KOT1P1.json  KOT1P2.json  KOT2P1.json  KOT2P2.json  KOT3P1.json  KOT3P2.json  KOT4P1.json  KOT4P2.json  (+162 more)
web_port/tests/: corpus_smoke.js
web_port_v2/: .gitignore  README.md  brzechwa.html  index.html
web_port_v2/src/: audio.js  input.js  loader.js  main.js  player.css  recorder.js  text.js  video.js
(+578 files in other folders)
